# redefin

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: 7a9d3b1f4c2c_add_audit_logs_table.py
app/: config.py  insights.py  main.py  models.py
app/static/: google_oauth_callback.html  index.html
app/static/css/: style.css
app/static/js/: app.js
backend/app/: crud.py  main.py  models.py
frontend/: google_oauth_callback.html  index.html
frontend/css/: style.css
frontend/js/: app.js  investments.js
scripts/: alembic_stamp_head_if_needed.py
