[project]
name = "js-controle-financeiro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pyotp>=2.10.0",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "pydantic>=1.10.7",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.22.0",
    "python-magic>=0.4.27",
    "python-dateutil>=2.8.2",
]
